operator/pkg/model/ingestion/testdata/gateway/grpc_route_filters_by_parent_ref_port/input-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  creationTimestamp: null
  name: platform
  namespace: gateway-ns
spec:
  gatewayClassName: ""
  listeners:
  - name: grpc-443
    port: 443
    protocol: HTTPS
  - name: grpc-8443
    port: 8443
    protocol: HTTPS
status: {}
