operator/pkg/model/ingestion/testdata/gateway/grpc_route_filters_by_parent_ref_port/input-grpcroute.yaml
- metadata:
    creationTimestamp: null
    name: grpc
    namespace: gateway-ns
  spec:
    parentRefs:
    - name: platform
      port: 8443
    rules:
    - backendRefs:
      - name: podinfo
        port: 9898
  status:
    parents: null
