operator/pkg/model/ingestion/testdata/gateway/grpc_route_filters_by_parent_ref_port/output-listeners.yaml
- hostname: "*"
  name: grpc-443
  port: 443
  protocol: HTTPS
  sources:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: platform
    namespace: gateway-ns
    version: v1
- hostname: "*"
  name: grpc-8443
  port: 8443
  protocol: HTTPS
  routes:
  - backends:
    - name: podinfo
      namespace: gateway-ns
      port:
        port: 9898
    path_match: {}
    timeout: {}
  sources:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: platform
    namespace: gateway-ns
    version: v1
